alignment fix

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -12,7 +12,7 @@ body{
 .qr__card{
     width: 100%;
     margin: auto;
-   margin-top: 20px;
+    margin-top: 120px;
     display: flex;
     justify-content: center;
     background-color: $white;
