--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ body {
 .qr__card {
   width: 100%;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
